[gd_scene load_steps=16 format=4 uid="uid://b17llv7pnk8tg"]

[ext_resource type="Texture2D" uid="uid://lr4e57xkmkac" path="res://assets/Terrain/Terrain (16x16).png" id="1_bsk8s"]
[ext_resource type="Texture2D" uid="uid://b8kxn3lfdy23a" path="res://assets/Background/Brown.png" id="1_ybq7d"]
[ext_resource type="Texture2D" uid="uid://cbeupxpr00rqe" path="res://assets/Menu/Buttons/Play.png" id="2_1j72e"]
[ext_resource type="Texture2D" uid="uid://i6iap38lfqkd" path="res://assets/Menu/Buttons/Close.png" id="2_ds748"]
[ext_resource type="Texture2D" uid="uid://dbji5476lrcwv" path="res://assets/Main Characters/Virtual Guy/Idle (32x32).png" id="2_rtei4"]
[ext_resource type="Script" path="res://scripts/play_button.gd" id="5_r2e31"]
[ext_resource type="Script" path="res://scripts/quit_button.gd" id="7_mxeg3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7xs15"]

[sub_resource type="Theme" id="Theme_632dc"]
Button/styles/focus = SubResource("StyleBoxEmpty_7xs15")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pdmph"]
texture = ExtResource("1_ybq7d")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_nv8gm"]
sources/0 = SubResource("TileSetAtlasSource_pdmph")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i3k78"]
texture = ExtResource("1_bsk8s")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_xogaq"]
sources/0 = SubResource("TileSetAtlasSource_i3k78")

[sub_resource type="AtlasTexture" id="AtlasTexture_vfxus"]
atlas = ExtResource("2_rtei4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_phve6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfxus")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_632dc")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAANAAEAAAAAAAAAAAARAAEAAAAAAAAAAAAVAAEAAAAAAAAAAAAZAAEAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAUAAAAAAAAAAAAZAAUAAAAAAAAAAAAVAAUAAAAAAAAAAAARAAUAAAAAAAAAAAANAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAABAAUAAAAAAAAAAAABAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAANAAkAAAAAAAAAAAARAAkAAAAAAAAAAAAVAAkAAAAAAAAAAAAZAAkAAAAAAAAAAAAdAAkAAAAAAAAAAAABAA0AAAAAAAAAAAAFAA0AAAAAAAAAAAAJAA0AAAAAAAAAAAANAA0AAAAAAAAAAAA=")
tile_set = SubResource("TileSet_nv8gm")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAACAD4AAAAGAAAAAAADAD4AAAAHAAAAAAAEAD4AAAAIAAAAAAAAAAwAAAAGAAAAAAABAAwAAAAHAAAAAAACAAwAAAAHAAAAAAAAAA0AAAAGAAEAAAAAAA4AAAAGAAEAAAAAAA8AAAAGAAEAAAAAABAAAAAGAAIAAAABAA0AAAAHAAEAAAABAA4AAAAHAAEAAAABAA8AAAAHAAEAAAACAA8AAAAHAAEAAAACAA4AAAAHAAEAAAACAA0AAAAHAAEAAAADAA0AAAAHAAEAAAAEAA0AAAAHAAEAAAAFAA0AAAAHAAEAAAAGAA0AAAAHAAEAAAAHAA0AAAAHAAEAAAAIAA0AAAAHAAEAAAAJAA0AAAAHAAEAAAAKAA0AAAAHAAEAAAALAA0AAAAHAAEAAAAMAA0AAAAHAAEAAAANAA0AAAAHAAEAAAANAA4AAAAHAAEAAAANAA8AAAAHAAEAAAAMAA8AAAAHAAEAAAALAA8AAAAHAAEAAAALAA4AAAAHAAEAAAAKAA4AAAAHAAEAAAAJAA4AAAAHAAEAAAAIAA4AAAAHAAEAAAAHAA4AAAAHAAEAAAAGAA4AAAAHAAEAAAAFAA4AAAAHAAEAAAAEAA4AAAAHAAEAAAADAA4AAAAHAAEAAAADAA8AAAAHAAEAAAAEAA8AAAAHAAEAAAAFAA8AAAAHAAEAAAAGAA8AAAAHAAEAAAAHAA8AAAAHAAEAAAAIAA8AAAAHAAEAAAAJAA8AAAAHAAEAAAAKAA8AAAAHAAEAAAAMAA4AAAAHAAEAAAABABAAAAAHAAIAAAACABAAAAAHAAIAAAADABAAAAAHAAIAAAAEABAAAAAHAAIAAAAFABAAAAAHAAIAAAAGABAAAAAHAAIAAAAHABAAAAAHAAIAAAAIABAAAAAHAAIAAAAJABAAAAAHAAIAAAAKABAAAAAHAAIAAAALABAAAAAHAAIAAAAMABAAAAAHAAIAAAANABAAAAAHAAIAAAANAAwAAAAKAAEAAAAMAAwAAAAHAAAAAAALAAwAAAAHAAAAAAAKAAwAAAAHAAAAAAAJAAwAAAAHAAAAAAAIAAwAAAAHAAAAAAAHAAwAAAAHAAAAAAAGAAwAAAAHAAAAAAAFAAwAAAAHAAAAAAAEAAwAAAAHAAAAAAADAAwAAAAHAAAAAAANAAsAAAAGAAAAAAAOAAsAAAAHAAAAAAAPAAsAAAAHAAAAAAAQAAsAAAAHAAAAAAAOAAwAAAAHAAEAAAAOAA0AAAAHAAEAAAAOAA4AAAAHAAEAAAAOAA8AAAAHAAEAAAAPAA8AAAAHAAEAAAAPAA4AAAAHAAEAAAAPAA0AAAAHAAEAAAAPAAwAAAAHAAEAAAAQAAwAAAAHAAEAAAAQAA0AAAAHAAEAAAAQAA4AAAAHAAEAAAAQAA8AAAAHAAEAAAAQAAoAAAAGAAEAAAAQAAkAAAAGAAEAAAAQAAgAAAAGAAEAAAARAAoAAAAHAAEAAAASAAoAAAAHAAEAAAATAAoAAAAHAAEAAAATAAkAAAAJAAEAAAASAAkAAAAHAAEAAAASAAgAAAAHAAEAAAARAAgAAAAHAAEAAAARAAkAAAAHAAEAAAATAAgAAAAHAAEAAAAQAAcAAAAGAAEAAAARAAcAAAAHAAEAAAASAAcAAAAHAAEAAAATAAcAAAAHAAEAAAARAAsAAAAKAAEAAAARAAwAAAAHAAEAAAARAA0AAAAHAAEAAAARAA4AAAAHAAEAAAARAA8AAAAHAAEAAAASAA8AAAAHAAEAAAASAA4AAAAHAAEAAAASAA0AAAAHAAEAAAASAAwAAAAHAAEAAAASAAsAAAAHAAEAAAATAAsAAAAHAAEAAAATAAwAAAAHAAEAAAATAA0AAAAHAAEAAAATAA8AAAAHAAEAAAATAA4AAAAHAAEAAAAOABAAAAAHAAIAAAAPABAAAAAHAAIAAAAQABAAAAAHAAIAAAARABAAAAAHAAIAAAASABAAAAAHAAIAAAATABAAAAAHAAIAAAARAAYAAAAHAAEAAAASAAYAAAAHAAEAAAATAAYAAAAHAAEAAAAQAAYAAAAGAAEAAAAQAAUAAAAGAAAAAAARAAUAAAAHAAAAAAASAAUAAAAHAAAAAAATAAUAAAAHAAAAAAAUAAUAAAAIAAAAAAAUAAYAAAAIAAEAAAAUAAcAAAAIAAEAAAAUAAgAAAAIAAEAAAAUAAkAAAAHAAAAAAAUAAoAAAAHAAEAAAAUAAsAAAAHAAEAAAAUAAwAAAAHAAEAAAAUAA0AAAAHAAEAAAAUAA4AAAAHAAEAAAAUAA8AAAAHAAEAAAAUABAAAAAHAAIAAAAVAAkAAAAHAAAAAAAWAAkAAAAHAAAAAAAVAAoAAAAHAAEAAAAVAAwAAAAHAAEAAAAWAAwAAAAHAAEAAAAVAAsAAAAHAAEAAAAWAAsAAAAHAAEAAAAWAAoAAAAHAAEAAAAVAA0AAAAHAAEAAAAVAA8AAAAHAAEAAAAWAA8AAAAHAAEAAAAWAA4AAAAHAAEAAAAWAA0AAAAHAAEAAAAVAA4AAAAHAAEAAAAVABAAAAAHAAIAAAAWABAAAAAHAAIAAAAXAAkAAAAHAAAAAAAYAAkAAAAHAAAAAAAZAAkAAAAHAAAAAAAaAAkAAAAHAAAAAAAbAAkAAAAHAAAAAAAcAAkAAAAIAAAAAAAcAAoAAAAIAAEAAAAcAAsAAAAIAAEAAAAcAAwAAAAIAAEAAAAcAA0AAAAIAAEAAAAcAA4AAAAIAAEAAAAcAA8AAAAIAAEAAAAcABAAAAAIAAIAAAAbABAAAAAHAAIAAAAaABAAAAAHAAIAAAAZABAAAAAHAAIAAAAYABAAAAAHAAIAAAAXABAAAAAHAAIAAAAXAA8AAAAHAAEAAAAXAA4AAAAHAAEAAAAXAA0AAAAHAAEAAAAYAA0AAAAHAAEAAAAYAAwAAAAHAAEAAAAYAAsAAAAHAAEAAAAYAAoAAAAHAAEAAAAXAAoAAAAHAAEAAAAXAAsAAAAHAAEAAAAXAAwAAAAHAAEAAAAZAA4AAAAHAAEAAAAZAA8AAAAHAAEAAAAYAA8AAAAHAAEAAAAYAA4AAAAHAAEAAAAaAA4AAAAHAAEAAAAaAA8AAAAHAAEAAAAbAA8AAAAHAAEAAAAbAA4AAAAHAAEAAAAbAA0AAAAHAAEAAAAaAA0AAAAHAAEAAAAZAA0AAAAHAAEAAAAaAAwAAAAHAAEAAAAbAAwAAAAHAAEAAAAZAAwAAAAHAAEAAAAZAAsAAAAHAAEAAAAaAAsAAAAHAAEAAAAbAAsAAAAHAAEAAAAbAAoAAAAHAAEAAAAaAAoAAAAHAAEAAAAZAAoAAAAHAAEAAAAVAAgAAAAMAAEAAAAPAAoAAAAMAAEAAAAAAAoAAAANAAEAAAAAAAsAAAANAAIAAAABAAoAAAAOAAEAAAABAAsAAAAOAAIAAAAAAAUAAAASAAEAAAABAAUAAAASAAEAAAACAAUAAAATAAEAAAAAAAcAAAASAAEAAAABAAcAAAATAAEAAAAHAAUAAAARAAEAAAAIAAUAAAASAAEAAAAJAAUAAAATAAEAAAA=")
tile_set = SubResource("TileSet_xogaq")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(264, 888)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_phve6")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = 78.0
offset_right = 313.0
offset_bottom = 281.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "PIXEL
ADVENTURE"
horizontal_alignment = 1

[node name="play button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 133.0
offset_top = -15.0
offset_right = 162.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6.2, 6.2)
pivot_offset = Vector2(14.4823, 14.4173)
icon = ExtResource("2_1j72e")
flat = true
icon_alignment = 1
script = ExtResource("5_r2e31")

[node name="quit button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -15.0
offset_right = -132.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6.64, 6.64)
pivot_offset = Vector2(14.4823, 14.4173)
icon = ExtResource("2_ds748")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_mxeg3")

[connection signal="mouse_entered" from="." to="play button" method="_on_menu_mouse_entered"]
[connection signal="mouse_exited" from="." to="play button" method="_on_menu_mouse_exited"]
[connection signal="mouse_entered" from="play button" to="play button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="play button" to="play button" method="_on_mouse_exited"]
[connection signal="pressed" from="play button" to="play button" method="_on_pressed"]
[connection signal="mouse_entered" from="quit button" to="quit button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="quit button" to="quit button" method="_on_mouse_exited"]
[connection signal="pressed" from="quit button" to="quit button" method="_on_pressed"]
